--- a/.cloudbees/workflows/workflow1.yaml
+++ b/.cloudbees/workflows/workflow1.yaml
@@ -6,7 +6,9 @@ on:
   pull_request:
     branches:
       - 'main'
-  workflow_dispatch:    
+  workflow_dispatch: 
+  schedule:
+    - cron: 0,5,10,15,20,25,30,35,40,45,50,55 * * * *
 
 jobs:
   build:
